--- a/client/app/celebrations/celebrations.html
+++ b/client/app/celebrations/celebrations.html
@@ -14,10 +14,11 @@
                         </div>
                     </div>
 
-                    <div ng-init="getText()" class="project-content col-md-4">
+                    <div ng-init="getText1()" class="project-content col-md-4">
                         <h4><span>Celebrations</span></h4>
-                        <button class="btn btn-default" ng-keyup="$textToSubmit.keyCode == 13 && submit()">Submit Changes</button>
-                        <div id="celebrationDescriptText" contenteditable="true">{{literalText}}</div>
+                        <button class="btn btn-default "ng-if="nav.isSuperAdmin()" ng-click="submit('celebrationDescriptText')">Submit Changes</button>
+                        <div id="celebrationDescriptText" ng-if="nav.isSuperAdmin()" contenteditable="true">{{literalText1}}</div>
+                        <div id="celebrationDescriptText" ng-if="!nav.isSuperAdmin()">{{literalText1}}</div>
                         <br></br>
                         <h4><span>Examples</span></h4>
                         <ul>
@@ -28,12 +29,19 @@
                     </div>
 
                 </div>
-                <blockquote><p>"Erma was amazing! I especially loved that she had
-                    great time management skills; she was personable, professional,
-                    and articulate. She had great etiquette skills, and she paid
-                    attention to small details."
-                </p><p><small>Sabrina &amp; Demetrius Peoples</small></p></blockquote>
+                <div ng-init="getText2()">
+                    <button class="btn btn-default "ng-if="nav.isSuperAdmin()" ng-click="submit('celebrationTestimonial')">Submit Changes</button>
+                    <blockquote><p id="celebrationTestimonial" ng-if="nav.isSuperAdmin()" contenteditable="true">{{literalText2}}</p>
+                    <blockquote><p id="celebrationTestimonial" ng-if="!nav.isSuperAdmin()">{{literalText2}}     
+                    </p><p><small>Sabrina &amp; Demetrius Peoples</small></p></blockquote>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+
+<!-- "Erma was amazing! I especially loved that she had
+great time management skills; she was personable, professional,
+and articulate. She had great etiquette skills, and she paid
+attention to small details." -->
