--- a/client/index.html
+++ b/client/index.html
@@ -151,10 +151,11 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/corporate/corporate.controller.js"></script>
+      <script src="app/client/partials/yourBudget/yourBudget.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
+      <script src="app/admin/admin.directive.js"></script>
       <script src="app/aboutus/aboutus.controller.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/admin/partials/adminContent/adminContent.directive.js"></script>
@@ -216,8 +217,8 @@
       <script src="app/client/partials/welcome/welcome.controller.js"></script>
       <script src="app/client/partials/welcome/welcome.js"></script>
       <script src="app/client/partials/yourBudget/yourBudget.controller.js"></script>
-      <script src="app/client/partials/yourBudget/yourBudget.js"></script>
       <script src="app/aboutus/aboutus.js"></script>
+      <script src="app/corporate/corporate.controller.js"></script>
       <script src="app/corporate/corporate.js"></script>
       <script src="app/customer/customer.controller.js"></script>
       <script src="app/customer/customer.js"></script>
