--- a/client/app/liveGallery/liveGallery.html
+++ b/client/app/liveGallery/liveGallery.html
@@ -3,9 +3,65 @@
         <div class="col-md-12">
             <legend class="text-center header">Recent Events Photos</legend>
         </div>
-        <div class="col-sm-12 text-center">
-            <iframe src="//embedsocial.com/facebook_album/album_photos/1047700455252146"
-            width="100%" height="700" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0"></iframe>
-        </div>
+        <section class="no-padding" id="portfolio">
+            <div class="container-fluid">
+                <div class="row no-gutter">
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="/weddings" class="portfolio-box">
+                            <img src="assets/images/homepage/weddings.jpg" class="img-responsive" alt="">
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="celebrations" class="portfolio-box">
+                            <img src="assets/images/homepage/decorations.jpg" class="img-responsive" alt="">
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="celebrations" class="portfolio-box">
+                            <img src="assets/images/homepage/baby_shower.jpg" class="img-responsive" alt="">
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="corporate" class="portfolio-box">
+                            <img src="assets/images/homepage/corporate.jpg" class="img-responsive" alt="">
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="weddings" class="portfolio-box">
+                            <img src="assets/images/homepage/cakes.jpg" class="img-responsive" alt="">
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="weddings" class="portfolio-box">
+                            <img src="assets/images/homepage/wedding_receptions.jpg" class="img-responsive" alt="">
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="/weddings" class="portfolio-box">
+                            <img src="assets/images/homepage/weddings.jpg" class="img-responsive" alt="">
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="celebrations" class="portfolio-box">
+                            <img src="assets/images/homepage/decorations.jpg" class="img-responsive" alt="">
+
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="celebrations" class="portfolio-box">
+                            <img src="assets/images/homepage/baby_shower.jpg" class="img-responsive" alt="">
+
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </div>
