--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,3 +1,34 @@
+<script type="text/javascript">
+    function uploadFile(id) {
+        console.log(id)
+        var formData = new FormData(),
+        file = document.getElementById(id).files[0],
+        xhr = new XMLHttpRequest(),
+        cloudName = "dxqqlgb4t";
+      formData.append("file", file);
+      formData.append("upload_preset", "i9nq3o8w"); // REQUIRED
+      formData.append("public_id",id);
+      for (var pair of formData.entries()) {
+        console.log(pair[0]+ ', ' + pair[1]);
+    }
+      xhr.open("POST", "https://api.cloudinary.com/v1_1/" +
+        cloudName +
+        "/image/upload");
+      xhr.onload = () => {
+        if (xhr.status === 200) {
+          // Success! You probably want to save the URL somewhere
+          var response = JSON.parse(xhr.response);
+          var temp = response.secure_url;
+          console.log(response);
+          // https address of uploaded file
+        } else {
+          alert("Upload failed. Please try agian.");
+        }
+      }
+      xhr.send(formData);
+    }
+    </script>
+
 <header class="hero-unit" id="banner">
     <div class="container">
         <div class="row">
@@ -12,36 +43,7 @@
   </header>
   
   
-  <script type="text/javascript">
-  function uploadFile() {
-    var formData = new FormData(),
-      file = document.getElementById("file").files[0],
-      xhr = new XMLHttpRequest(),
-      cloudName = "dxqqlgb4t";
-    formData.append("file", file);
-    formData.append("upload_preset", "i9nq3o8w"); // REQUIRED
-    formData.append("Invalidate",true);
-    formData.append("public_id","new_new_test");
-    for (var pair of formData.entries()) {
-      console.log(pair[0]+ ', ' + pair[1]);
-  }
-    xhr.open("POST", "https://api.cloudinary.com/v1_1/" +
-      cloudName +
-      "/image/upload");
-    xhr.onload = () => {
-      if (xhr.status === 200) {
-        // Success! You probably want to save the URL somewhere
-        var response = JSON.parse(xhr.response);
-        var temp = response.secure_url;
-        console.log(response);
-        // https address of uploaded file
-      } else {
-        alert("Upload failed. Please try agian.");
-      }
-    }
-    xhr.send(formData);
-  }
-  </script>
+
   
   <section id="services">
           <div class="container">
@@ -128,8 +130,10 @@
                   </a>
               </div>
               <div class="col-lg-4 col-sm-6">
+                <h4 ng-if="nav.isSuperAdmin()"><input type="file" id="baby_shower_photo" onchange="uploadFile('baby_shower_photo')" /> </h4>
                   <a href="celebrations" class="portfolio-box">
-                      <img src="assets/images/homepage/baby_shower.jpg" class="img-responsive" alt="">
+                      <img src="https://res.cloudinary.com/dxqqlgb4t/image/upload/baby_shower_photo.jpg" onError="this.src = 'assets/images/empty_image.jpg'" class="img-responsive" alt=""/>
+                      <!-- <img src="assets/images/homepage/baby_shower.jpg" class="img-responsive" alt=""> -->
                       <div class="portfolio-box-caption">
                           <div class="portfolio-box-caption-content">
                               <div class="project-category text-faded">
