--- a/client/app/corporate/corporate.html
+++ b/client/app/corporate/corporate.html
@@ -1,11 +1,43 @@
+<script type="text/javascript">
+     function uploadFile(id) {
+         console.log(id)
+         var formData = new FormData(),
+         file = document.getElementById(id).files[0],
+         xhr = new XMLHttpRequest(),
+         cloudName = "dxqqlgb4t";
+       formData.append("file", file);
+       formData.append("upload_preset", "i9nq3o8w"); // REQUIRED
+       formData.append("public_id",id);
+       for (var pair of formData.entries()) {
+         console.log(pair[0]+ ', ' + pair[1]);
+     }
+       xhr.open("POST", "https://api.cloudinary.com/v1_1/" +
+         cloudName +
+         "/image/upload");
+       xhr.onload = () => {
+         if (xhr.status === 200) {
+           // Success! You probably want to save the URL somewhere
+           var response = JSON.parse(xhr.response);
+           var temp = response.secure_url;
+           console.log(response);
+           // https address of uploaded file
+         } else {
+           alert("Upload failed. Please try agian.");
+         }
+       }
+       xhr.send(formData);
+     }
+    </script>
 <div id="container">
     <div id="content">
         <div class="container">
+            <h4 ng-if="nav.isSuperAdmin()"><input type="file" id="corporate_testimonial_photo" onchange="uploadFile('corporate_testimonial_photo')" /> </h4>
             <div class="project-page row">
                 <div class="project-media col-md-8">
                     <div class="item">
                         <a class="lightbox" data-lightbox-gallery="gallery2">
-                            <img alt="" src="assets/images/homepage/corporate.jpg" style="width:100%;">
+                            <img src="https://res.cloudinary.com/dxqqlgb4t/image/upload/corporate_testimonial_photo.jpg" onError="this.src = 'assets/images/homepage/corporate.jpg'" style="width:100%;" class="img-responsive" alt=""/>
+                            <!-- <img alt="" src="assets/images/homepage/corporate.jpg" style="width:100%;"> -->
                         </a>
                     </div>
                 </div>
