--- a/client/index.html
+++ b/client/index.html
@@ -127,7 +127,7 @@
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <script src="bower_components/lodash/lodash.js"></script>
+      <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
       <script src="bower_components/d3/d3.js"></script>
@@ -154,8 +154,7 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/corporate/corporate.controller.js"></script>
-      <script src="app/client/partials/yourBudget/yourBudget.js"></script>
+      <script src="app/customer/customer.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
@@ -223,10 +222,9 @@
       <script src="app/client/partials/welcome/welcome.js"></script>
       <script src="app/client/partials/yourBudget/yourBudget.controller.js"></script>
       <script src="app/client/partials/yourBudget/yourBudget.js"></script>
-      <script src="app/aboutus/aboutus.js"></script>
+      <script src="app/corporate/corporate.controller.js"></script>
       <script src="app/corporate/corporate.js"></script>
       <script src="app/customer/customer.controller.js"></script>
-      <script src="app/customer/customer.js"></script>
       <script src="app/aboutus/aboutus.js"></script>
       <script src="app/customer/myEvents/myEvents.controller.js"></script>
       <script src="app/customer/myEvents/myEvents.js"></script>
@@ -238,6 +236,7 @@
       <script src="app/factories/subcontractor.factory.js"></script>
       <script src="app/factories/testimonial.factory.js"></script>
       <script src="app/factories/textEdit.factory.js"></script>
+      <script src="app/googlemaps.js"></script>
       <script src="app/links/links.controller.js"></script>
       <script src="app/links/links.js"></script>
       <script src="app/liveGallery/liveGallery.controller.js"></script>
