new cloudinary account info

--- a/client/app/celebrations/celebrations.html
+++ b/client/app/celebrations/celebrations.html
@@ -4,9 +4,9 @@
          var formData = new FormData(),
          file = document.getElementById(id).files[0],
          xhr = new XMLHttpRequest(),
-         cloudName = "dxqqlgb4t";
+         cloudName = "essence-events";
        formData.append("file", file);
-       formData.append("upload_preset", "i9nq3o8w"); // REQUIRED
+       formData.append("upload_preset", "ra3hgrcb"); // REQUIRED
        formData.append("public_id",id);
        for (var pair of formData.entries()) {
          console.log(pair[0]+ ', ' + pair[1]);
