--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,32 +1,32 @@
 <script type="text/javascript">
-    function uploadFile(id) {
-        console.log(id)
-        var formData = new FormData(),
-        file = document.getElementById(id).files[0],
-        xhr = new XMLHttpRequest(),
-        cloudName = "dxqqlgb4t";
-      formData.append("file", file);
-      formData.append("upload_preset", "i9nq3o8w"); // REQUIRED
-      formData.append("public_id",id);
-      for (var pair of formData.entries()) {
-        console.log(pair[0]+ ', ' + pair[1]);
-    }
-      xhr.open("POST", "https://api.cloudinary.com/v1_1/" +
-        cloudName +
-        "/image/upload");
-      xhr.onload = () => {
-        if (xhr.status === 200) {
-          // Success! You probably want to save the URL somewhere
-          var response = JSON.parse(xhr.response);
-          var temp = response.secure_url;
-          console.log(response);
-          // https address of uploaded file
-        } else {
-          alert("Upload failed. Please try agian.");
-        }
-      }
-      xhr.send(formData);
-    }
+     function uploadFile(id) {
+         console.log(id)
+         var formData = new FormData(),
+         file = document.getElementById(id).files[0],
+         xhr = new XMLHttpRequest(),
+         cloudName = "essence-events";
+       formData.append("file", file);
+       formData.append("upload_preset", "ra3hgrcb"); // REQUIRED
+       formData.append("public_id",id);
+       for (var pair of formData.entries()) {
+         console.log(pair[0]+ ', ' + pair[1]);
+     }
+       xhr.open("POST", "https://api.cloudinary.com/v1_1/" +
+         cloudName +
+         "/image/upload");
+       xhr.onload = () => {
+         if (xhr.status === 200) {
+           // Success! You probably want to save the URL somewhere
+           var response = JSON.parse(xhr.response);
+           var temp = response.secure_url;
+           console.log(response);
+           // https address of uploaded file
+         } else {
+           alert("Upload failed. Please try agian.");
+         }
+       }
+       xhr.send(formData);
+     }
     </script>
 
 <header class="hero-unit" id="banner">
