--- a/client/index.html
+++ b/client/index.html
@@ -127,7 +127,7 @@
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <!-- <script src="bower_components/lodash/dist/lodash.compat.js"></script> -->
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
       <script src="bower_components/d3/d3.js"></script>
@@ -135,6 +135,7 @@
       <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
       <script src="bower_components/moment/moment.js"></script>
       <script src="bower_components/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.js"></script>
+      <!-- <script src="bower_components/angular-bootstrap-calendar/dist/js/calendarUtils.js.map"></script> -->
       <script src="bower_components/api-check/dist/api-check.js"></script>
       <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
       <script src="bower_components/markerclustererplus/src/markerclusterer.js"></script>
